--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ span.mr_women i.active{background-position:-27px -5px;}
 .mr_self_l img{position:absolute;left:4px;width:73px;height:73px;top:8px;}
 .mr_self_l i{position:absolute;z-index:2;width:81px;height:81px;background:url(http://www.lagou.com/images/myresume/mr_txs.png) no-repeat;}
 .mr_moudle_content .mr_self_l{float:left;width:100px;padding-top:5px;}
-.mr_moudle_content .mr_self_r{float:left;width:504px;color:#555;line-height:26px;}
+.mr_moudle_content .mr_self_r{float:left;width:604px;color:#555;line-height:26px;}
 #selfDescription .mr_moudle_content{padding-bottom:48px;}
 #expectJob .expectjob_list{position:relative;}
 #expectJob .mr_job_des i{position:absolute;width:32px;height:31px;background:url(http://www.lagou.com/images/myresume/icons_mr.png) no-repeat;}
@@ -265,8 +265,8 @@ span.mr_women i.active{background-position:-27px -5px;}
 #skillsAssess{padding-bottom:12px;}
 .mr_skill_con{padding-left:16px;margin-bottom:14px;position:relative;}
 .mr_skill_con span{vertical-align:middle;display:inline-block;}
-.mr_skill_con .mr_skill_name{width:90px;height:22px;text-align:right;margin-right:13px;word-wrap:break-word;white-space:nowrap;overflow:hidden;text-overflow: ellipsis;}
-.mr_skill_con .mr_skill_plan{position:relative;width:410px;height:8px;border-radius:4px;background-color:#eee;margin-right:21px;overflow:hidden;}
+.mr_skill_con .mr_skill_name{width:115px;height:22px;text-align:right;margin-right:13px;word-wrap:break-word;white-space:nowrap;overflow:hidden;text-overflow: ellipsis;}
+.mr_skill_con .mr_skill_plan{position:relative;width:350px;height:8px;border-radius:4px;background-color:#eee;margin-right:21px;overflow:hidden;}
 .mr_skill_plan em{position:absolute;left:0;top:0;display:inline-block;height:8px;background-color:#00b88d;border-radius:4px;overflow:hidden;}
 .mr_skill_con .mr_skill_delete{width:13px;height:13px;background:url(http://www.lagou.com/images/myresume/skill_delete.png) center top no-repeat;cursor:pointer;}
 .mr_moudle_content .mr_skill_add{padding-left:125px;*padding-left:104px;color:#999999;font-size:16px;}
@@ -402,7 +402,7 @@ span.mr_women i.active{background-position:-27px -5px;}
 						<span class="mr_name">张正华</span>
 					</div>
 					<div class="mr_p_introduce mr_w604 clearfixs">
-						<span class="mr_intro">Java服务器开发一年经验</span>
+						<span class="mr_intro">前后端开发一年经验</span>
 					</div>
 					<div class="mr_p_info mr_infoed mr_w604 clearfixs">
 						<div class="info_t">
@@ -411,7 +411,7 @@ span.mr_women i.active{background-position:-27px -5px;}
 								<!-- 如果用户选择的身份是教育经历 -->
 									<span class="shenfen">
 										<i></i>
-										Java开发工程师 · 费哲软件
+										开发工程师 · 费哲软件
 									</span>
 								<!-- 否则根据用户是否是应届毕业生区分用户的身份 -->
 						</div>
@@ -421,7 +421,7 @@ span.mr_women i.active{background-position:-27px -5px;}
 						</div>
 						<div class="info_b">
 							<span class="mobile"><i></i>18601572590</span>&nbsp;&nbsp;
-							<span class="email"><i></i>zzhlake@qq.com</span>
+							<span class="email"><i></i>zzhlake@163.com</span>
 						</div>
 						<div class="mr_sns">
 						<!--   -------------------社交账号     -----------------       -->
@@ -452,7 +452,7 @@ span.mr_women i.active{background-position:-27px -5px;}
 										</div>
 										<div class="l2">
 											<h4>费哲软件</h4>
-											<span>Java开发工程师</span>
+											<span>开发工程师</span>
 										</div>
 									</div>
 									<div class="mr_content_r">
@@ -520,7 +520,7 @@ span.mr_women i.active{background-position:-27px -5px;}
 									<div class="mr_content_l">
 										<div class="l2">
 											<a class="projectTitle nourl">F-ONE设施设备管理平台</a>
-											<p>服务器开发，前端开发，移动接口开发</p>
+											<p>接口开发，前端开发</p>
 										</div>
 									</div>
 
@@ -534,9 +534,9 @@ span.mr_women i.active{background-position:-27px -5px;}
 <p><br /></p>
 <p>个人工作内容：</p>
 <ol>
- <li><p>工单，巡检，计划性维护等模块的迭代更新，代码优化。</p></li>
- <li><p>公告，知识库，合同管理功能的开发。</p></li>
- <li><p>部分报表模块的设计及开发等。</p></li>
+ <li><p>接口开发，前端开发，前后端结合开发</p></li>
+ <li><p>页面样式编写，调整等工作</p></li>
+ <li><p>利用eCharts进行报表开发</p></li>
 </ol>
 								</div>
 								</div>
@@ -545,7 +545,7 @@ span.mr_women i.active{background-position:-27px -5px;}
 									<div class="mr_content_l">
 										<div class="l2">
 											<a class="projectTitle nourl">贺利式齿科大厅新风及能源报表集控项目</a>
-											<p>服务器开发，报表开发</p>
+											<p>接口开发，前端开发</p>
 										</div>
 									</div>
 
@@ -559,9 +559,34 @@ span.mr_women i.active{background-position:-27px -5px;}
 <p><br /></p>
 <p>个人工作内容：</p>
 <ol>
+ <li><p>样式库开发和复用</p></li>
  <li><p>硬件接口数据集成与存储</p></li>
  <li><p>报表数据计算处理及数据接口</p></li>
- <li><p>前台报表展示</p></li>
+ <li><p>利用eCharts进行前台报表展示</p></li>
+</ol>
+								</div>
+								</div>
+								<div class="mr_jobe_list">
+								<div class="clearfixs">
+									<div class="mr_content_l">
+										<div class="l2">
+											<a class="projectTitle nourl">BIM模型展示</a>
+											<p>前端开发</p>
+										</div>
+									</div>
+									<div class="mr_content_r">
+										<span>2017.03 -- 至今</span>
+									</div>
+								</div>
+								<div class="mr_content_m olpf">
+									<p>项目简介：</p>
+<p>利用Autodesk公司提供的API进行建筑3D模型展示。</p>
+<p><br /></p>
+<p>个人工作内容：</p>
+<ol>
+ <li><p>样式调整</p></li>
+ <li><p>利用官方API将BIM模型显示在浏览器中</p></li>
+ <li><p>使用three.js进行3D模型描点和描线</p></li>
 </ol>
 								</div>
 								</div>
@@ -605,28 +630,24 @@ span.mr_women i.active{background-position:-27px -5px;}
 							</div>
 						</div>
 					</div>
-					<!--               自我描述                                             -->
+					<!--  技能描述 -->
 					<div id="selfDescription">
 						<div>
 							<div class="mr_moudle_head clearfixs">
 								<div class="mr_head_l">
 									<div class="mr_title">
-										<span class="mr_title_l"></span><span class="mr_title_c">自我描述</span><span class="mr_title_r"></span>
+										<span class="mr_title_l"></span><span class="mr_title_c">技能描述</span><span class="mr_title_r"></span>
 									</div>
 								</div>
 							</div>
 							<div class="mr_moudle_content clearfixs">
-								<div class="mr_self_l">
-									<!-- 自我描述头像为基本信息页面上传的头像，稍后和后台确认这个 -->
-									<i></i>
-									<img src="http://www.lagou.com/i/image/M00/33/9C/CgpFT1lA6I-ABApTAADs-F5NJXA50.jpeg" alt="张正华"/>
-								</div>
 								<div class="mr_self_r">
 									<ol>
- <li><p>自我评价：学习能力强，脑子转得快；</p></li>
- <li><p>个人在毕业前夕带领另一个实习生一同完成了贺利式报表项目的功能；在校也曾经担任过班长，有一定的领导能力，乐于助人；</p></li>
- <li><p>是一名中共党员，富有集体荣誉感，并且有较强的责任心；</p></li>
- <li><p>乐于交际，喜欢开朗的团队，能一起进步；</p></li>
+ <li><p>了解浏览器兼容性问题；精通CSS，懂得使用CSS来简化网页设计以及风格复用，精通盒装模型等；了解CSS标准和差异性；</p></li>
+ <li><p>能熟练使用JS，精通使用jQuery库，熟练使用JS完成特效和DOM操作，熟悉函数指针和函数回调机制；</p></li>
+ <li><p>了解CSS3和HTML5的特性，会写简单的JS插件，精通闭包；熟悉浏览器调试技巧；</p></li>
+ <li><p>熟悉并使用过node和vue，乐于钻研前端各种技术知识；</p></li>
+ <li><p>有前后端结合开发经验，能熟练编写接口和调用接口；能熟练使用ajax进行接口调用；</p></li>
 </ol>
 								</div>
 							</div>
@@ -647,7 +668,7 @@ span.mr_women i.active{background-position:-27px -5px;}
 								<input id="expHideId" type="hidden" value="$!expectJobses.id" />
 								<div class="mr_job_info" data-id="$!expectJobses.id">
 									<ul class="clearfixs">
-										<li class="mr_name_li" ><i></i><span class="mr_job_name" title="开发工程师java后台">开发工程师java后台</span></li>
+										<li class="mr_name_li" ><i></i><span class="mr_job_name" title="前端工程师">前端工程师</span></li>
 										<li class="mr_jobtype_li"> <i></i><span class="mr_job_type" title="$!expectJobses.positionType">全职</span></li>
 										<li class="mr_city_li"> <i></i><span class="mr_job_adr" title="$!expectJobses.city">无锡</span></li>
 										<li class="mr_jobrange_li" ><i></i><span class="mr_job_range" title="$!expectJobses.salarys">5k-10k</span></li>
@@ -669,44 +690,43 @@ span.mr_women i.active{background-position:-27px -5px;}
 							</div>
 							<div class="mr_moudle_content">
 								<div class="mr_skill_con">
-									<span class="mr_skill_name" title="Java">Java</span>
-									<span class="mr_skill_plan" data-skillLevel = "67">
-									 <em style="width: 67%"></em>
+									<span class="mr_skill_name" title="HTML/CSS">HTML/CSS</span>
+									<span class="mr_skill_plan" data-skillLevel = "75">
+									 <em style="width: 75%"></em>
 									</span>
 									<span class="mr_skill_level">精通</span>
 								</div>
 								<div class="mr_skill_con">
-									<span class="mr_skill_name" title="MySQL">MySQL</span>
-									<span class="mr_skill_plan" data-skillLevel = "66">
-									 <em style="width: 66%"></em>
+									<span class="mr_skill_name" title="Javascript">Javascript</span>
+									<span class="mr_skill_plan" data-skillLevel = "75">
+									 <em style="width: 75%"></em>
 									</span>
 									<span class="mr_skill_level">精通</span>
 								</div>
 								<div class="mr_skill_con">
-									<span class="mr_skill_name" title="Java SSM/SSH">Java SSM/SSH</span>
-									<span class="mr_skill_plan" data-skillLevel = "49">
-									 <em style="width: 49%"></em>
-									</span>
-									<span class="mr_skill_level">掌握</span>
-								</div>
-								<div class="mr_skill_con">
-									<span class="mr_skill_name" title="jQuery+bootstrap">jQuery+bootstrap</span>
-									<span class="mr_skill_plan" data-skillLevel = "61">
-									 <em style="width: 61%"></em>
+									<span class="mr_skill_name" title="jQuery/Bootstrap">jQuery/Bootstrap</span>
+									<span class="mr_skill_plan" data-skillLevel = "65">
+									 <em style="width: 65%"></em>
 									</span>
 									<span class="mr_skill_level">精通</span>
 								</div>
 								<div class="mr_skill_con">
-									<span class="mr_skill_name" title="vue.js">vue.js</span>
-									<span class="mr_skill_plan" data-skillLevel = "45">
-									 <em style="width: 45%"></em>
+									<span class="mr_skill_name" title="Ajax">Ajax</span>
+									<span class="mr_skill_plan" data-skillLevel = "65">
+									 <em style="width: 65%"></em>
+									</span>
+									<span class="mr_skill_level">精通</span>
+								</div>
+								<div class="mr_skill_con">
+									<span class="mr_skill_name" title="Node/Vue">Node/Vue</span>
+									<span class="mr_skill_plan" data-skillLevel = "50">
+									 <em style="width: 50%"></em>
 									</span>
 									<span class="mr_skill_level">掌握</span>
 								</div>
 							</div>
 						</div>
 					</div>
-
 					<!--               自定义模块                                           -->
 					<div id="customBlock">
 						<div>
